<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".MainActivity">


    <ImageView
        android:id="@+id/back"
        android:layout_width="match_parent"
        android:layout_height="428dp"
        app:srcCompat="@drawable/intro" />

    <ImageView
        android:id="@+id/logo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="150sp"
        app:srcCompat="@drawable/icon_cat" />

    <TextView
        android:id="@+id/textlogo"
        android:layout_width="match_parent"
        android:textColor="#A393E4"
        android:textSize="30sp"
        android:textAlignment="center"
        android:textStyle="bold"
        android:layout_marginTop="50sp"
        android:layout_height="wrap_content"
        android:text="@string/logo_text" />

    <Button
        android:id="@+id/button_feed"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/back"
        android:layout_marginHorizontal="70sp"
        android:layout_marginTop="35sp"
        android:background="@drawable/btn_background1"
        android:onClick="startFeedActivity"
        android:text="@string/feed_text"
        android:textAlignment="center"
        android:textSize="18sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/button_walk"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/button_feed"
        android:layout_marginHorizontal="70sp"
        android:layout_marginTop="35sp"
        android:background="@drawable/btn_background1"
        android:onClick="startWalkActivity"
        android:text="@string/walk_text"
        android:textAlignment="center"
        android:textSize="18sp"
        android:textStyle="bold" />

</RelativeLayout>