<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FeedActivity">


    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#DACDE8"
        android:backgroundTint="#F8EFEF"
        android:visibility="visible"
        app:srcCompat="@drawable/background"
        android:alpha="0.07">

    </ImageView>

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/open_sans_bold"
        android:gravity="center"
        android:shadowColor="@color/shadow_text"
        android:shadowDx="2"
        android:shadowDy="2"
        android:shadowRadius="5"
        android:text="@string/animal_text"
        android:textColor="@color/black"
        android:textSize="22sp" />

    <Spinner
        android:id="@+id/spinnerAnimalType"
        android:layout_width="250dp"
        android:layout_height="48dp"
        android:layout_below="@id/textView5"
        android:layout_marginLeft="70dp"
        android:layout_marginTop="5dp"
        android:backgroundTint="#8682C8"
        android:textAlignment="center" />


    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/spinnerAnimalType"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/open_sans_bold"
        android:shadowColor="@color/shadow_text"
        android:shadowDx="2"
        android:shadowDy="2"
        android:shadowRadius="5"
        android:text="@string/ves"
        android:textColor="@color/black"
        android:textSize="22sp" />


    <EditText
        android:id="@+id/kg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/textView7"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="-1dp"
        android:ems="10"
        android:fontFamily="@font/open_sans_bold"
        android:inputType="number|numberDecimal"
        android:singleLine="true"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/kg"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/open_sans_bold"
        android:shadowColor="@color/shadow_text"
        android:shadowDx="2"
        android:shadowDy="2"
        android:shadowRadius="5"
        android:text="@string/activity"
        android:textColor="@color/black"
        android:textSize="22sp" />


    <Spinner
        android:id="@+id/spinnerAnimalStage"
        android:layout_width="250dp"
        android:layout_height="55dp"
        android:layout_below="@id/textView8"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="5dp"
        android:backgroundTint="#8682C8"
        android:textAlignment="center" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/spinnerAnimalStage"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="15dp"
        android:fontFamily="@font/open_sans_bold"
        android:shadowColor="@color/shadow_text"
        android:shadowDx="2"
        android:shadowDy="2"
        android:shadowRadius="5"
        android:text="@string/cal_text"
        android:textColor="@color/black"
        android:textSize="22sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/calorie"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/textView9"
        android:layout_marginLeft="15dp"
        android:ems="10"
        android:fontFamily="@font/open_sans_bold"
        android:inputType="number"
        android:singleLine="true"
        android:textSize="20sp" />

    <Button
        android:id="@+id/all"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/calorie"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="10dp"
        android:backgroundTint="#9699DC"
        android:fontFamily="@font/open_sans_bold"
        android:text="Рассчитать"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/allvivod"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/all"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="5dp"
        android:layout_marginRight="15dp"
        android:text=" "
        android:textColor="@color/black"
        android:textSize="22sp" />

    <Button
        android:id="@+id/recommendation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="84dp"
        android:layout_marginBottom="20dp"
        android:backgroundTint="#9699DC"
        android:fontFamily="@font/open_sans_bold"
        android:text="Рекомендации"
        android:textSize="18sp" />


</RelativeLayout>